--- a/style.css
+++ b/style.css
@@ -26,12 +26,35 @@ body {
 .text{
     text-align: left;
     padding-left: 30px;
+    background-color: rgba(128, 128, 128, 0.593);
     
 }
 .text h1 {
-    margin-bottom: 10px;
+    margin: 10px;
 }
 p {
     margin: 10px;
+    font-size: x-large;
+    padding-top: 30px;
 }
+button{
+    padding: 10px 5px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+footer a {
+    padding-right: 20px;
+    font-size: xx-large;
+    color: black;
+}
+footer{
+    margin-top: 50px;
+}
+footer a:hover{
+    color: grey;
+    transition: 0.5s;
+}
+
 
